force-app/main/default/objects/Milestone__c/fields/Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Amount_Due__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Amount Due</label>
    <length>50</length>
    <type>Text</type>
</CustomField>