force-app/main/default/objects/Milestone__c/fields/Cloned_from_Milestone_ID__c.field-meta.xml
<CustomField>
    <fullName>Cloned_from_Milestone_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cloned from Milestone ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>