force-app/main/default/objects/Milestone__c/fields/Objective_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Objective_Achieved__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Objective Achieved</label>
    <length>18</length>
    <type>Text</type>
</CustomField>