force-app/main/default/objects/Milestone__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scope</label>
    <referenceTo>Scope__c</referenceTo>
    <relationshipLabel>Milestones</relationshipLabel>
    <relationshipName>Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>