force-app/main/default/objects/Milestone__c/fields/TaskRay_Project__c.field-meta.xml
<CustomField>
    <fullName>TaskRay_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TaskRay Project</label>
    <referenceTo>TASKRAY__Project__c</referenceTo>
    <relationshipLabel>Milestones</relationshipLabel>
    <relationshipName>Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>