force-app/main/default/objects/Milestone__c/fields/Timeline__c.field-meta.xml
<CustomField>
    <fullName>Timeline__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Timeline</label>
    <length>18</length>
    <type>Text</type>
</CustomField>