force-app/main/default/objects/Milestone__c/recordTypes/BLDG_Project_Milestone.recordType-meta.xml
<RecordType>
    <fullName>BLDG_Project_Milestone</fullName>
    <active>true</active>
    <label>BLDG - Project Milestone</label>
</RecordType>