force-app/main/default/objects/Milestone__c/recordTypes/Shift3.recordType-meta.xml
<RecordType>
    <fullName>Shift3</fullName>
    <active>true</active>
    <label>Shift3</label>
</RecordType>