force-app/main/default/objects/Milestone__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>SF_Admin_Team</group>
        <group>Tech_Support_Team</group>
    </sharedTo>
</ListView>