force-app/main/default/objects/Milestone__c/listViews/BLDG_Design_Milestones.listView-meta.xml
<ListView>
    <fullName>BLDG_Design_Milestones</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Milestone__c.BLDG_Project_Milestone</value>
    </filters>
    <label>BLDG - Design Milestones</label>
    <sharedTo>
        <group>BLDG_Team</group>
        <group>SF_Admin_Team</group>
        <group>Tech_Support_Team</group>
    </sharedTo>
</ListView>