force-app/main/default/objects/Milestone__c/listViews/BW_C_Suite_Milestones.listView-meta.xml
<ListView>
    <fullName>BW_C_Suite_Milestones</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Project__c</columns>
    <filterScope>Everything</filterScope>
    <label>BW C-Suite Milestones</label>
    <sharedTo>
        <group>SF_Admin_Team</group>
        <group>Tech_Support_Team</group>
    </sharedTo>
</ListView>