force-app/main/default/objects/Milestone__c/listViews/Hashtag_Milestones.listView-meta.xml
<ListView>
    <fullName>Hashtag_Milestones</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Project__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
        <value>BW - Hashtag - Phase 1</value>
    </filters>
    <label>Hashtag Milestones</label>
    <sharedTo>
        <group>SF_Admin_Team</group>
        <group>Tech_Support_Team</group>
    </sharedTo>
</ListView>